=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.24_01-dev

fix broken Win32 build (unresolved external symbol _ap_configtestonly)
[Eric Cholet <cholet@logilune.com>]

=item 1.24 - May 16, 2000

'sub handler : method {}' is now treated as a method handler

variable $Apache::Server::ConfigTestOnly is set to 1 if Apache
is running in configuration test mode (httpd -t)
(not unavailable under Win32)
[Eric Cholet <cholet@logilune.com>]

add PerlAddVar directive, like PerlSetVar, but uses ap_table_add
instead of ap_table_set

Makefile.PL warns about 5.6.0+uselargefiles if USE_APXS

Apache::Table->unset can now be called with an array reference

Apache::PerlRun::flush_namespace fixes, so aliased (imported)
code/hash/array/scalar are undefined without undef-ing the pointed-to
data and without using B.pm, thanks to Richard Chen for the suggestion

document Apache::print's special behavior wrt references
[Jeffrey W. Baker <jwbaker@acm.org>]

fix core dump triggered by <Perl>do 'foo.pl'</Perl>,
thanks to Robert S. Thau for the spot

pass $Config{ccflags} to apache for 5.6.0+

fix Apache->httpd_conf, thanks to Will Trillich for the spot

fixed 'make clean' to remove FILES => passed to MakeMaker

=item 1.23 - April 20, 2000

create test files during Makefile.PL so 'make test' can be run as root

add Apache::FILENO method for 5.6.0+ tied filehandle support
thanks to Richard Titmuss for the spot

--disable-rule=EXPAT is passed to Apache's configure to avoid
XML::Parser conflicts

User/Group for 'make test' can be overridden with the environment
variables APACHE_USER/APACHE_GROUP

fix PerlSetVar inheritance bug
[Sander van Zoest <sander@vanzoest.com>]

set r->notes("error-notes") to $@ if $@ after a Perl*Handlers is run
[Doug / Tom Mornini <tmornini@infomania.com>]

added INSTALL.raven
[Adam Qualset <adam@covalent.net>]

$c->remote_ip($ip) now also sets conn->remote_addr to make