@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_01-dev
 
+fix 1.24's Apache::Table->unset changes for win32
+[Randy Kobes <randy@theoryx5.uwinnipeg.ca>]
+
 fix broken Win32 build (unresolved external symbol _ap_configtestonly)
 [Eric Cholet <cholet@logilune.com>]
 
